# claudeexe

./: .gitignore  CLAUDE.md  Makefile  README.md  claude-code-sdk-with-windows-ko.md  claude-code-sdk-with-windows.md  claude-mascot-todo.md  eslint.config.js  index.html  package-lock.json  package.json  plan5.md
.claude/: settings.local.json
.github/workflows/: release.yml
mascot-mcp/: Cargo.toml
mascot-mcp/src/: main.rs
mcp/: clawd-server.mjs  config.json
scripts/: bundle-sidecar.mjs  create-dev-exe.mjs  generate-icons.mjs
sidecar/: agent-sidecar.mjs  dev-prompt.txt  prompt.txt
sidecar/tools/: clipboard.mjs  index.mjs  move.mjs  screenshot.mjs  window.mjs
src/: App.tsx  ChatInput.tsx  ChatWindow.tsx  Clawd.tsx  README.md  SpeechBubble.tsx  bindings.ts  constants.ts  emotion.ts  facialState.ts  main.tsx  styles.css  useChatHistory.ts  useMascotState.ts  usePhysics.ts  vite-env.d.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude_runner.rs  codex_runner.rs  commands.rs  lib.rs  main.rs  sidecar.rs  state.rs
src/components/: App.tsx  ChatInput.tsx  ChatWindow.tsx  Clawd.tsx  ContextMenuWindow.tsx  CwdModal.tsx  MascotApp.tsx  MiniSupikiApp.tsx  QuestionModal.css  QuestionModal.tsx  Supiki.tsx  SupikiApp.tsx
src/hooks/: useAgentChat.ts  useAutoWalk.ts  useChatHistory.ts  useChatWindow.ts  useClawdEvents.ts  useContextMenu.ts  useDrag.ts  useMascotState.ts  useMiniMascot.ts  useModalWindow.ts  usePhysics.ts  useSupikiSounds.ts
src/i18n/: index.ts
src/services/: agentService.ts  (+3 more)
(+23 files in other folders)
